--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,2 @@
-<h1>Help</h1>
-<p>Get help on Ruby On Rails Tutorial at the
-<a href="http://railstutorial.org/help">Rails Tutorial help Pages</a></p>
+<h1>StaticPages#help</h1>
+<p>Find me in app/views/static_pages/help.html.erb</p>
